jobs_nogpu/S12.10.test4_parse_2019-11-11_22-36-34
[33mWARNING:[0m seccomp requested but not enabled, seccomp library is missing or too old
  File "analysis/parse.py", line 52
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
